JPAHIBERNATE-10 : Add statistics management
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/module-jpa-hibernate@33627 bab10101-e421-0410-a517-8ce0973de3ef

--- a/src/java/fr/paris/lutece/plugins/jpa/modules/hibernate/resources/hibernate_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/jpa/modules/hibernate/resources/hibernate_messages_fr.properties
@@ -6,3 +6,25 @@
 # Plugin infos
 module.description=Module Hibernate pour le plugin JPA
 module.provider=Mairie de Paris
+
+# Monitor
+monitor.adminFeature.title=Monitoring Hibernate
+monitor.adminFeature.description=Visualisation des statistiques d'Hibernate
+monitor.pageTitle=Statistiques d'utilisation Hibernate
+monitor.jmx.title=JMX
+monitor.jmx.status=Statut
+monitor.jmx.activated=OK
+monitor.jmx.buttonActivate=Activer
+monitor.jmx.notActivated=D\u00e9sactiv\u00e9
+monitor.stats.title=Statistiques
+monitor.stats.state=Statut
+monitor.stats.buttonDisable=D\u00e9sactiver
+monitor.stats.buttonEnable=Activer
+monitor.stats.pool=Pool
+monitor.stats.disabled=Les statistiques sont d\u00e9sactiv\u00e9es.
+monitor.stats.startTime=D\u00e9marrage
+monitor.stats.entities=Entit\u00e9s
+monitor.stats.sessions=Sessions/Transactions
+monitor.stats.queries=Requ\u00eates
+monitor.stats.cache=Cache
+monitor.stats.buttonClear=Effacer les statistiques
